--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -642,3 +642,46 @@ a:active {
     top: var(--header-logo-link-top);
     left: var(--header-logo-link-left);    
 }
+
+.card-work .card-image {
+    position: relative;
+    overflow: hidden;
+}
+.card-work .card-image img{
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+    vertical-align: bottom;
+}
+.card-work .card-inner{
+    position: absolute;
+    top: -0.1rem;
+    left: -0.1rem;
+    right: -0.1rem;
+    z-index: 1;
+}
+.card-work:hover .card-inner{
+    background-color: rgba(0, 0, 0,0.7);
+}
+
+.card-work .card-title{
+    text-align: center;
+    margin: 0;
+    opacity: 0;
+    height: 100%;
+    position: relative;
+}
+
+.card-work .card-title a{
+    display: block;
+    text-decoration: none;
+    padding: 45%;
+}
+.card-work .card-title a::after{
+    position: absolute;
+    position: 0 0 0 0;
+    content: "";
+}
+.card-work:hover .card-title {
+    opacity: 1;
+}
