--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -9,15 +9,18 @@
 html {
     scroll-behavior: smooth;
 }
-body, a{
+body{
     background-color: var(--text-color);
 }
-
-
+a {
+    background-color: var(--text-color);
+}
 .visually-hidden {
     display: none;
 }
-
-.card-category, .section-tagline {
+.card-category {
+    background-color: var(--color-primary);
+}
+.section-tagline {
     background-color: var(--color-primary);
 }
