--- a/0x02-CSS_advanced/styles/4-style.css
+++ b/0x02-CSS_advanced/styles/4-style.css
@@ -1,12 +1,15 @@
+/*task 4*/
 :root {
-    --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    /*colors*/
     --color-primary: #d73953;
     --color-black : #090909;
     --color-white : #ffffff;
     --color-light-gray: #f3f3f3;
     --color-dark-gray: #353535;
     --text-color: var (--color-balck)
+    /*font family*/
+    --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 html {
     scroll-behavior: smooth;
@@ -22,7 +25,6 @@ h1, h2, h3, h4, h5, h6 {
 a {
     background-color: var(--text-color);
 }
-
 
 .visually-hidden {
     display: none;
