--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -24,7 +24,7 @@ html {
 body {
     background-color: var(--text-color);
     font-family: var(--font-family-base);
-    font: var(--font-size-medium);
+    font-size: var(--font-size-medium);
 } 
 
 section :is(h1, h2, h3, h4, h5, h6) {
