--- a/0x02-CSS_advanced/styles/6-style.css
+++ b/0x02-CSS_advanced/styles/6-style.css
@@ -22,7 +22,7 @@ html {
 body {
     background-color: var(--text-color);
     font-family: var(--font-family-base);
-    font: var(--font-size-medium);
+    font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
 } 
 
