--- a/0x02-CSS_advanced/styles/7-style.css
+++ b/0x02-CSS_advanced/styles/7-style.css
@@ -1,17 +1,21 @@
 :root {
-    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    /*color properties*/
     --color-primary: #d73953;
     --color-black : #090909;
     --color-white : #ffffff;
     --color-light-gray: #f3f3f3;
     --color-dark-gray: #353535;
     --text-color: var (--color-balck)
+    /*font properties*/
+    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    /*font size*/
     --font-size-small : 1.2rem;
     --font-size-medium : 1.6rem;
     --font-size-large : 1.8rem;
     --font-size-x-large : 2.3rem;
     --font-size-xx-large : 4.8rem;
+    /*font weight*/
     --font-weight-regular: 400;
     --font-weight-bold: 700;
 }
@@ -22,7 +26,7 @@ html {
 body {
     background-color: var(--text-color);
     font-family: var(--font-family-base);
-    font: var(--font-size-medium);
+    font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
 } 
 
@@ -33,7 +37,6 @@ h1, h2, h3, h4, h5, h6 {
 a {
     background-color: var(--text-color);
 }
-
 
 .visually-hidden {
     display: none;
