--- a/0x02-CSS_advanced/styles/23-style.css
+++ b/0x02-CSS_advanced/styles/23-style.css
@@ -496,7 +496,7 @@ a:active {
     display: block;
     padding: 0.5rem 1rem;
 }
-.nac .nav-link:hover {
+.nav .nav-link:hover {
     color: var(--nav-item-link-hover);
 }
 .row .ul{
