--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -1,26 +1,33 @@
+/* task 3 */
 :root {
     --color-primary: #d73953;
     --color-black : #090909;
     --color-white : #ffffff;
-    --color-light-gray: #f3f3f3;
-    --color-dark-gray: #353535;
-    --text-color: var (--color-balck)
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
+    --text-color: var(--color-black);
 }
+
 html {
     scroll-behavior: smooth;
 }
+
 body {
     background-color: var(--text-color);
 }
+
 a {
     background-color: var(--text-color);
 }
+
 .visually-hidden {
     display: none;
 }
-.section-tagline {
+
+.card-category {
     background-color: var(--color-primary);
 }
-.card-category {
+
+.section-tagline {
     background-color: var(--color-primary);
 }
