--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -1,35 +1,38 @@
-/*task 5*/
+/* task 5 */
 :root {
-    /*colors*/
+    /* colors */
     --color-primary: #d73953;
     --color-black : #090909;
     --color-white : #ffffff;
-    --color-light-gray: #f3f3f3;
-    --color-dark-gray: #353535;
-    --text-color: var (--color-balck)
-    /*font family*/
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
+    --text-color: var(--color-black);
+    /* fonts family*/
     --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
     --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    /*fonts sizes*/
-    --font-size-small : 1.2rem;
-    --font-size-medium : 1.6rem;
-    --font-size-large : 1.8rem;
-    --font-size-x-large : 2.3rem;
-    --font-size-xx-large : 4.8rem;
+    /* fonts sizes */
+    --font-size-small: 1.2rem;
+    --font-size-medium: 1.6rem;
+    --font-size-large: 1.8rem;
+    --font-size-x-large: 2.3rem;
+    --font-size-xx-large: 4.8rem;
 }
+
 html {
     scroll-behavior: smooth;
-    font: 62.5%;
+    font-size: 62.5%;
 }
+
 body {
     background-color: var(--text-color);
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
-} 
+}
 
-h1, h2, h3, h4, h5, h6 {
+section :is(h1, h2, h3, h4, h5, h6) {
     font-family: var(--font-family-title);
 }
+
 a {
     background-color: var(--text-color);
 }
@@ -38,6 +41,10 @@ a {
     display: none;
 }
 
-.card-category, .section-tagline {
+.card-category {
+    background-color: var(--color-primary);
+}
+
+.section-tagline {
     background-color: var(--color-primary);
 }
